feat(server): ADD tasksRoute and createTasks, findAllTasksByProjectId API
