# be-steady-server/src/dtos/tasks.dto.ts
@@ -1,0 +1,17 @@
+import { IsDateString, IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateTaskDto {
+  @IsDateString()
+  @IsNotEmpty()
+  public datetime: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public projectId: string;
+}
+
+export class FindAllTasksByProjectIdDto {
+  @IsString()
+  @IsNotEmpty()
+  public projectId: string;
+}
