# be-steady-server/src/interfaces/tasks.interface.ts
@@ -1,0 +1,5 @@
+export interface Task {
+  id?: string;
+  datetime: Date;
+  projectId: string; // FK
+}
